# Mashina_Sync_Python

./: .env.example  .gitignore  PROJECT_GUIDE_RU.md  README.md  pyproject.toml
app/: __init__.py
app/cli/: commands.py  main.py
app/config/: __init__.py  catalog_mapping.py  providers.py  settings.py
app/db/: __init__.py  health.py  models.py  reflection.py  safety.py  session.py
app/dto/: __init__.py  catalog_payload.py  legacy_ad.py  sync_result.py
app/mappers/: __init__.py  (+3 more)
docs/: README.md
docs_from_php/: db-readonly-inspection.md  field-mapping-old-runtime.md  final-open-questions.md  legacy-audit.md  legacy-sync-flow.md  legacy-sync-models.md  manual-db-verification.md  migration-plan.md  new-db-assumptions.md  new-db-open-questions.md  new-db-write-plan.md  php-to-python-replacement-map.md  provider-allmotors.md  provider-autohub.md  provider-autoland.md  provider-autoshina.md  provider-avtoinstall.md  provider-banzaimotors.md  provider-bavaria.md  provider-coverage.md  provider-detalkg.md  provider-kia.md  provider-lexus.md  provider-okayamaomsk.md  provider-shinabar.md  provider-shredder.md  provider-toyota.md  provider-toyota_tradein.md  recommended-db-migrations.sql  safe-sync-listing-map-migration.sql  sql-usage.md
tests/: __init__.py  test_autoland_provider.py  test_catalog_references.py  test_diff_service.py  test_hashing.py  test_mapping.py  test_remaining_providers.py  test_repository_sql.py  test_repository_write_core.py  test_sync_attribute_filter.py  test_sync_service_autoland.py  test_verification_service.py  test_write_safety.py
(+38 files in other folders)
